k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    name: backstage
    app.kubernetes.io/name: backstage
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: idp-platform
